# django-psych-ai

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: __init__.py  throttling.py  urls.py  views.py
assessments/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
config/: __init__.py  asgi.py  settings.py  urls.py
frontend/: package.json
frontend/public/: index.html
frontend/src/components/: App.jsx
planner/: __init__.py  apps.py  models.py  tasks.py  tests.py  urls.py  views.py
planner/ai/: planner.py
static/css/: main.css
static/js/: main.js
templates/: base.html
templates/assessments/: detail.html
templates/planner/: plan.html
tests/: apps.py
users/: __init__.py  admin.py  models.py  serializers.py  tests.py  urls.py  views.py
